--- a/css/style.css
+++ b/css/style.css
@@ -768,21 +768,29 @@ a:hover {
   font-size: 2rem;
   margin-bottom: 0;
 }
+/*======================================
+//--> VARIABLES
+======================================*/
+:root {
+  --primary-color: #192655;
+  --secondary-color: #4e4e4e;
+  --highlight-color: #cd5c08;
+  --white-color: #fff;
+  --transition-time: 0.3s;
+}
 
 /*======================================
-//--//-->   PORTFOLIO
+//--> PORTFOLIO
 ======================================*/
-
 .work-box {
   margin-bottom: 3rem;
-  -webkit-backface-visibility: hidden;
+  background-color: var(--white-color);
   backface-visibility: hidden;
-  background-color: #fff;
 }
 
 .work-box:hover img {
-  -webkit-transform: scale(1.3);
   transform: scale(1.3);
+  transition: transform var(--transition-time) ease-in-out;
 }
 
 .work-img {
@@ -790,476 +798,100 @@ a:hover {
   overflow: hidden;
 }
 
-.work-img img {
-  transition: all 1s;
-}
-
 .work-content {
   padding: 2rem 3% 1rem 4%;
 }
 
 .work-content .w-more {
-  color: #4e4e4e;
+  color: var(--secondary-color);
   font-size: 0.8rem;
 }
 
-.work-content .w-more .w-ctegory {
-  color: #192655;
+.work-content .w-more .w-ctegory,
+.work-content .w-like a {
+  color: var(--primary-color);
 }
 
 .work-content .w-like {
   font-size: 2.5rem;
-  color: #192655;
   float: right;
 }
 
-.work-content .w-like a {
-  color: #192655;
-}
-
-.work-content .w-like .num-like {
-  font-size: 0.7rem;
-}
-
-.w-title {
-  font-size: 1.2rem;
-}
-
 /*======================================
-//--//-->   TESTIMONIALS
+//--> TESTIMONIALS
 ======================================*/
-
-.testimonials .owl-carousel .owl-item img {
-  width: auto;
-}
-
 .testimonial-box {
-  color: #fff;
+  color: var(--white-color);
   text-align: center;
-}
-
-.testimonial-box .author-test {
-  margin-top: 1rem;
-}
-
-.testimonial-box .author-test img {
-  margin: 0 auto;
 }
 
 .testimonial-box .author {
-  color: #fff;
   text-transform: uppercase;
   font-weight: 600;
-  margin: 1rem 0;
-  display: block;
   font-size: 1.4rem;
+  margin: 1rem 0;
 }
 
 .testimonial-box .comit {
+  background-color: var(--white-color);
+  color: var(--primary-color);
   font-size: 2rem;
-  color: #192655;
-  background-color: #fff;
   width: 52px;
   height: 52px;
-  display: block;
+  line-height: 52px;
   margin: 0 auto;
   border-radius: 50%;
-  line-height: 1.6;
 }
 
 /*======================================
-//--//-->   BLOG
+//--> BUTTON
 ======================================*/
-
-.card-blog .card-body {
-  position: relative;
-}
-
-.card-blog .card-category-box {
-  position: absolute;
-  text-align: center;
-  top: -16px;
-  left: 15px;
-  right: 15px;
-  line-height: 25px;
-  overflow: hidden;
-}
-
-.card-blog .card-category {
-  display: inline-block;
-  color: #fff;
-  padding: 0 15px 5px;
-  overflow: hidden;
-  background-color: #192655;
-  border-radius: 4px;
-}
-
-.card-blog .card-category .category {
-  color: #fff;
-  display: inline-block;
-  text-transform: uppercase;
-  font-size: 0.7rem;
-  letter-spacing: 0.1px;
-  margin-bottom: 0;
-}
-
-.card-blog .card-title {
-  font-size: 1.3rem;
-  margin-top: 0.6rem;
-}
-
-.card-blog .card-description {
-  color: #4e4e4e;
-}
-
-.card-blog .post-author {
-  display: inline-block;
-}
-
-.card-blog .post-date {
-  color: #4e4e4e;
-  display: inline-block;
-  float: right;
-}
-
-/*======================================
-//--//-->   BLOG-SINGLE
-======================================*/
-
-.post-box,
-.form-comments,
-.box-comments,
-.widget-sidebar {
-  padding: 2rem;
-  background-color: #fff;
-  margin-bottom: 3rem;
-}
-
-.blog-wrapper .article-title {
-  font-size: 1.5rem;
-}
-
-.blog-wrapper .post-meta {
-  margin: 1rem 0;
-}
-
-.blog-wrapper .post-meta ul {
-  border-left: 4px solid#192655;
-  margin-top: 1rem;
-}
-
-.blog-wrapper .post-meta ul li {
-  display: inline-block;
-  margin-left: 15px;
-}
-
-.blog-wrapper .post-meta ul a {
-  color: #192655;
-}
-
-.blog-wrapper .post-meta ul span {
-  color: #1e1e1e;
-}
-
-.blog-wrapper .blockquote {
-  border-left: 4px solid#192655;
-  padding: 18px;
-  font-style: italic;
-}
-
-/*------/ Comments /------*/
-
-.box-comments .list-comments li {
-  padding-bottom: 40px;
-}
-
-.box-comments .list-comments .comment-avatar {
-  display: table-cell;
-  vertical-align: top;
-}
-
-.box-comments .list-comments .comment-avatar img {
-  width: 80px;
-  height: 80px;
-}
-
-.box-comments .list-comments .comment-author {
-  font-size: 1.3rem;
-}
-
-.box-comments .list-comments .comment-details {
-  display: table-cell;
-  vertical-align: top;
-  padding-left: 25px;
-}
-
-.box-comments .list-comments a {
-  color: #192655;
-}
-
-.box-comments .list-comments span {
-  color: #1e1e1e;
-  font-style: italic;
-}
-
-.box-comments .comment-children {
-  margin-left: 40px;
-}
-
-/*------/ Sidebar /------*/
-
-.widget-sidebar .sidebar-title {
-  font-size: 1.6rem;
-  font-weight: 600;
-  border-left: 5px solid#192655;
-  padding-left: 15px;
-  text-transform: uppercase;
-  margin-bottom: 1.5rem;
-}
-
-.widget-sidebar .list-sidebar li {
-  position: relative;
-  padding: 6px 0 6px 24px;
-}
-
-.widget-sidebar .list-sidebar li:before {
-  position: absolute;
-  content: "";
-  width: 10px;
-  height: 1px;
-  left: 0;
-  background-color: #192655;
-  top: 20px;
-}
-
-.sidebar-search input {
-  background-color: #fff;
-  border-radius: 0;
-  transition: all 0.5s ease-in-out;
-}
-
-.sidebar-search .btn-search {
-  background-color: #192655;
-  border-color: #192655;
-  border-radius: 0;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.widget-tags ul li {
-  display: inline-block;
-  background-color: #192655;
-  padding: 0.2rem 0.6rem;
-  margin-bottom: 0.5rem;
-  border-radius: 15px;
-}
-
-.widget-tags ul li a {
-  color: #fff;
-}
-
-/*======================================
-//--//-->   CONTACT
-======================================*/
-
-.footer-paralax {
-  padding: 4rem 0 0 0;
-}
-
-.contact-mf {
-  margin-top: 4rem;
-}
-
-/*======================================
-//--//-->   FOOTER
-======================================*/
-
-footer {
-  text-align: center;
-  color: #fff;
-  padding-bottom: 4rem;
-}
-
-footer .copyright {
-  margin-bottom: 0.3rem;
-}
-
-footer .credits {
-  margin-bottom: 0;
-}
-
-footer .credits a {
-  color: #fff;
-}
-
-/*======================================
-//--//-->   CONtaCT FORM
-======================================*/
-
-#sendmessage {
-  color: #192655;
-  border: 1px solid#192655;
-  display: none;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-  margin-bottom: 15px;
-}
-
-#errormessage {
-  color: red;
-  display: none;
-  border: 1px solid red;
-  text-align: center;
-  padding: 15px;
-  font-weight: 600;
-  margin-bottom: 15px;
-}
-
-#sendmessage.show,
-#errormessage.show,
-.show {
-  display: block;
-}
-
-.validation {
-  color: red;
-  display: none;
-  margin: 0 0 20px;
-  font-weight: 400;
-  font-size: 13px;
-}
-
-/*======================================
-//--//-->   BUTTON
-======================================*/
-
 .button {
   display: inline-block;
   padding: 0.3rem 0.6rem;
-  text-align: center;
-  vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
   font-size: 1rem;
   border-radius: 0.3rem;
-  border: 1px solid transparent;
-  transition: all 500ms ease;
+  transition: all var(--transition-time) ease;
   cursor: pointer;
-}
-
-.button:focus {
-  outline: 0;
 }
 
 .button:hover {
   background-color: #0062d3;
-  color: #fff;
-  transition: all 500ms ease;
+  color: var(--white-color);
 }
 
 .button-a {
-  background-color: #192655;
-  color: #fff;
-  border-color: #cde1f8;
+  background-color: var(--primary-color);
+  color: var(--white-color);
 }
 
-.button-big {
-  padding: 0.9rem 2.3rem;
-  font-size: 1.2rem;
+.btn-color {
+  background: var(--highlight-color);
+  transition: all 1s ease;
 }
 
-.button-rouded {
-  border-radius: 5rem;
+.btn-color:hover {
+  background: transparent;
+  border: 2px solid var(--highlight-color);
+  color: var(--white-color);
 }
 
-.btn-lg {
-  padding: 0.5rem 1rem;
-  font-size: 1.25rem;
-  line-height: 1.5;
-  border-radius: 0.3rem;
-}
-
+/*======================================
+//--> MEDIA QUERIES
+======================================*/
 @media (min-width: 577px) {
   .counter-box {
     margin-bottom: 1.8rem;
   }
 }
 
-@media (min-width: 767px) {
-  .about-mf .box-pl2 {
-    margin-top: 3rem;
-    padding-left: 0rem;
-  }
-
-  .card-blog {
-    margin-bottom: 3rem;
-  }
-
-  .contact-mf .box-pl2 {
-    margin-top: 3rem;
-    padding-left: 0rem;
-  }
-}
-
 @media (min-width: 768px) {
-  .box-shadow-full {
-    padding: 3rem;
-  }
-
-  .navbar-b.navbar-trans .nav-item,
-  .navbar-b.navbar-reduce .nav-item {
-    padding-left: 10px;
-  }
-
-  .navbar-b.navbar-trans .nav-link:before,
-  .navbar-b.navbar-reduce .nav-link:before {
-    margin-left: 18px;
-  }
-
-  .intro .intro-title {
-    font-size: 4.5rem;
-  }
-
-  .intro .intro-subtitle {
-    font-size: 2.5rem;
-  }
-
-  .intro-single .intro-title {
-    font-size: 3.5rem;
-  }
-
   .testimonial-box .description {
     padding: 0 5rem;
   }
 
-  .post-box,
-  .form-comments,
-  .box-comments,
-  .widget-sidebar {
+  .box-shadow-full {
     padding: 3rem;
-  }
-
-  .blog-wrapper .article-title {
-    font-size: 1.9rem;
-  }
-
-  .box-comments .list-comments .comment-author {
-    font-size: 1.5rem;
-  }
-}
-
-@media (min-width: 992px) {
-  .testimonial-box .description {
-    padding: 0 8rem;
-  }
-}
-
-@media (min-width: 1200px) {
-  .testimonial-box .description {
-    padding: 0 13rem;
   }
 }
 
@@ -1267,37 +899,4 @@ footer .credits a {
   .back-to-top {
     bottom: 15px;
   }
-}
-
-.btn-color {
-  background: #CD5C08;
-  transition: all 1s ease;
-}
-
-.btn-color:hover {
-  background: transparent;
-  border: 2px solid #CD5C08;
-  color: #fff;
-  transition: all 0.3s;
-}
-
-.resume-btn:hover {
-  color: #333 !important;
-}
-
-.portfolio-row {
-  gap: 5px;
-}
-
-.portfolio-row .col {
-  padding-bottom: 0;
-  background: #CD5C08;
-  border-radius: 25px;
-  margin-bottom: 30px;
-}
-.portfolio-row .col .work-box, .portfolio-row .col img {
-  border-radius: 20px;
-}
-.portfolio-row .col .work-box {
-  margin-block: 0;
 }
